objects/Advitya_Test__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Advitya Tests</relationshipLabel>
        <relationshipName>Advitya_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field_Currency__c</fullName>
        <label>Field Currency</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filed_Number__c</fullName>
        <label>Filed Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gopal_del__c</fullName>
        <label>Gopal</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Money__c</fullName>
        <label>Money</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone_1__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subham__c</fullName>
        <label>Subham</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Syed__c</fullName>
        <label>Syed</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <label>Temp</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text_Long__c</fullName>
        <label>Text Long</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>check_box__c</fullName>
        <defaultValue>true</defaultValue>
        <label>check box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>date_time__c</fullName>
        <label>date time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>field10__c</fullName>
        <label>field10</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field11__c</fullName>
        <label>field11</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field12__c</fullName>
        <label>field12</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>formula1__c</fullName>
        <formula>Text_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geolocation__c</fullName>
        <label>geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>lookup2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advitya_Test 2</label>
        <referenceTo>Advitya_Test_2__c</referenceTo>
        <relationshipLabel>Advitya Tests</relationshipLabel>
        <relationshipName>Advitya_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>multipicklilst__c</fullName>
        <label>multipicklilst</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                    <default>true</default>
                    <label>One</label>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
                <value>
                    <fullName>Four</fullName>
                </value>
                <value>
                    <fullName>Five</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>percent__c</fullName>
        <label>percent</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>text_encrypt__c</fullName>
        <label>text encrypt</label>
        <length>150</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>time__c</fullName>
        <label>time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>url__c</fullName>
        <label>url</label>
        <type>Url</type>
    </fields>
    <label>Advitya Test</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Email__c</columns>
        <columns>field10__c</columns>
        <columns>field11__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Advitya Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Advitya Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>